feat; verificação do preenchimento dos dados

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <button onclick="calcularComposto()">Juros Compostos</button>
 
     <h2 id="resultado"></h2>
+    <h1 id="resultado_falha" style="color: red;"></h1>
 
     <script src="script.js"></script>
 </body>
